Refonte landing PM freelance: contenu incarné et structure orientée conversion

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <title>Inawa — Product Manager & Dév multi-plateformes</title>
+  <title>Jan Tumpach — Product Manager / Chef de produit freelance</title>
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
@@ -11,176 +11,189 @@
     <div class="container">
       <a class="logo" href="/">Inawa</a>
       <nav>
-        <a href="#products">Produits</a>
-        <a href="#services">Services</a>
-        <a href="#contact" class="btn">Contact</a>
+        <a href="#method">Méthode</a>
+        <a href="#cases">Cas concrets</a>
+        <a href="#growth-projects">Projets</a>
+        <a href="#contact" class="btn">Échanger</a>
       </nav>
     </div>
   </header>
 
   <main>
     <section id="hero" class="hero container">
-      <h1>Vous avez une bonne idée, mais vous ne savez pas comment la concrétiser ?</h1>
-      <p class="lead">Je vous aide à transformer une intuition ou un concept en produit numérique réel, clair et viable —
-      de la structuration produit au développement multi-plateformes.</p>
-      <p class="meta">Développeur multi-plateformes (backend & frontend) · Product Manager · Chef de produit marketing<br>iOS · macOS · Android · Web</p>
+      <p class="eyebrow">Product Manager freelance</p>
+      <h1>Je structure vos idées pour en faire des produits et services solides, rentables et durables.</h1>
+      <p class="lead">Je suis Jan Tumpach, Product Manager freelance. J’accompagne entrepreneurs et experts, de l’analyse stratégique jusqu’au lancement.</p>
+      <p class="meta">Vous vous concentrez sur votre vision. Je m’occupe du cadrage, des décisions opérationnelles et de l’exécution.</p>
       <p class="ctas">
-        <a href="#contact" class="btn primary">Parler de votre idée</a>
-        <a href="#products" class="btn secondary">Voir mes produits</a>
+        <a href="#contact" class="btn primary">Réserver un échange de 20 minutes</a>
+        <a href="#method" class="btn secondary">Découvrir ma méthode</a>
       </p>
+      <p class="hero-note">À la fin de l’échange : une vision claire des prochaines étapes.</p>
     </section>
 
-    <section id="proofs" class="container proofs">
-      <article class="card">
-        <h3>Produit</h3>
-        <p>Clarification du problème, définition du MVP, priorisation et roadmap réaliste. Pas de fonctionnalités gadgets, pas de sur-ingénierie.</p>
-      </article>
-      <article class="card">
-        <h3>Technique</h3>
-        <p>Développement backend & frontend, applications mobiles et web, architecture propre et maintenable. Je construis des produits qui peuvent évoluer sans être refaits.</p>
-      </article>
-      <article class="card">
-        <h3>Marché</h3>
-        <p>Positionnement, messages clés, étude concurrentielle, préparation au lancement (stores, web, SEO/ASO). Un produit n’existe que s’il est compréhensible et désirable.</p>
-      </article>
-    </section>
-
-    <section id="method" class="container method">
-      <h2>De l’idée floue au produit publié</h2>
-      <ol class="steps">
-        <li><strong>Clarifier</strong><br>Nous partons de votre idée pour identifier le vrai problème à résoudre, la cible, la proposition de valeur et ce qui doit (ou non) être construit.</li>
-        <li><strong>Structurer</strong><br>Je transforme cette vision en plan d’action : roadmap, MVP, expérience utilisateur, choix techniques cohérents avec vos objectifs.</li>
-        <li><strong>Construire</strong><br>Je développe le produit de bout en bout : backend, frontend, mobile ou web, avec des itérations rapides et testables.</li>
-        <li><strong>Lancer et améliorer</strong><br>Une fois en ligne, nous observons, ajustons et améliorons. Un bon produit se construit dans la durée, pas en une seule livraison.</li>
-      </ol>
-      <p class="note">Vous restez propriétaire de la vision. Je la rends concrète, exécutable et durable.</p>
-    </section>
-
-    <section id="services" class="container services">
-      <h2>Comment je peux vous accompagner</h2>
-      <div class="offers">
-        <article class="offer">
-          <h3>🔹 Sprint “Idée → plan concret”</h3>
-          <p><em>(1 à 2 semaines)</em><br>Pour celles et ceux qui ont une idée mais ne savent pas par où commencer.
-          <ul>
-            <li>clarification du concept</li>
-            <li>analyse rapide du marché et des alternatives</li>
-            <li>proposition de valeur et positionnement</li>
-            <li>définition d’un MVP réaliste</li>
-            <li>roadmap et priorisation</li>
-          </ul></p>
-          <a href="#contact" class="btn">Discuter de votre idée</a>
+    <section id="pillars" class="container pillars">
+      <h2>J’incarne. Je structure. J’exécute.</h2>
+      <div class="pillar-grid">
+        <article class="card">
+          <h3>J’incarne</h3>
+          <p>Je porte une posture claire : cadrer sans bruit, décider sans agitation, avancer avec constance.</p>
         </article>
-        <article class="offer">
-          <h3>🔹 Build MVP</h3>
-          <p><em>(4 à 8 semaines)</em><br>Pour transformer un plan clair en produit fonctionnel.
-          <ul>
-            <li>design de l’expérience</li>
-            <li>développement backend & frontend</li>
-            <li>applications mobiles / web</li>
-            <li>analytics, stabilité, mise en ligne</li>
-          </ul></p>
-          <a href="#contact" class="btn">Lancer un MVP</a>
+        <article class="card">
+          <h3>Je structure</h3>
+          <p>Je transforme les intuitions en priorités, puis les priorités en plan d’action lisible par toute l’équipe.</p>
         </article>
-        <article class="offer">
-          <h3>🔹 Accompagnement produit</h3>
-          <p><em>(mensuel)</em><br>Pour faire évoluer un produit existant.
-          <ul>
-            <li>priorisation et arbitrage</li>
-            <li>amélioration continue</li>
-            <li>préparation croissance et nouvelles fonctionnalités</li>
-            <li>accompagnement stratégique</li>
-          </ul></p>
-          <a href="#contact" class="btn">En savoir plus</a>
+        <article class="card">
+          <h3>J’exécute</h3>
+          <p>Je ne m’arrête pas aux recommandations. Je construis, je livre et je pilote les itérations.</p>
         </article>
       </div>
     </section>
 
-    <section id="products" class="container products">
-      <h2>Produits que j’ai conçus et développés</h2>
-      <p class="muted">Ces projets sont des produits réels, pensés, construits et itérés dans la durée.</p>
+    <section id="why" class="container story">
+      <h2>Pourquoi je fais ce métier</h2>
+      <p>J’aime transformer le flou artistique en décisions claires.</p>
+      <p>J’ai vu trop de projets s’épuiser faute de priorisation ou de méthode. Trop d’experts brillants bloqués dans l’opérationnel.</p>
+      <p>Je crois qu’un bon produit repose sur trois choses : une vision nette, des choix assumés, et une exécution rigoureuse.</p>
+      <p>Mon rôle est simple : poser le cadre, réduire le bruit, et vous faire avancer pas à pas vers un résultat tangible.</p>
+      <p class="story-quote">Je ne me contente pas de recommander. Je construis.</p>
+    </section>
+
+    <section id="method" class="container method">
+      <h2>La méthode INAWA</h2>
+      <p class="muted">Toujours la même logique : étape, livrable, impact.</p>
+      <div class="method-grid">
+        <article class="method-step">
+          <h3>1. Clarifier</h3>
+          <ul>
+            <li>Analyse marché</li>
+            <li>Persona</li>
+            <li>Opportunités et risques</li>
+            <li>Positionnement</li>
+          </ul>
+          <p><strong>Livrables :</strong> note stratégique synthétique, plan d’action priorisé.</p>
+          <p><strong>Impact :</strong> vous savez où jouer, quoi traiter en premier et pourquoi.</p>
+        </article>
+        <article class="method-step">
+          <h3>2. Structurer</h3>
+          <ul>
+            <li>Roadmap</li>
+            <li>Backlog priorisé</li>
+            <li>Architecture produit</li>
+            <li>Choix techniques et opérationnels</li>
+          </ul>
+          <p><strong>Livrables :</strong> PRD, roadmap 6 à 12 mois, OKR et KPI définis.</p>
+          <p><strong>Impact :</strong> les décisions deviennent simples et l’équipe avance dans le bon ordre.</p>
+        </article>
+        <article class="method-step">
+          <h3>3. Exécuter et lancer</h3>
+          <ul>
+            <li>Coordination</li>
+            <li>Tests</li>
+            <li>Mise en marché</li>
+            <li>Boucle de feedback</li>
+          </ul>
+          <p><strong>Livrables :</strong> produit lancé, plan d’itération, tableau de pilotage.</p>
+          <p><strong>Impact :</strong> vous pilotez avec visibilité et vous améliorez sans perdre la vision.</p>
+        </article>
+      </div>
+      <p class="note">Vous savez quoi faire, dans quel ordre, et pourquoi.</p>
+    </section>
+
+    <section id="cases" class="container cases">
+      <h2>Cas concrets</h2>
+      <p class="muted">Même sans vanity metrics, la maîtrise se voit dans la structure, les choix et la livraison.</p>
+      <div class="case-grid">
+        <article class="case">
+          <h3>Cas 1 — Lancement d’une plateforme d’expertise</h3>
+          <p><strong>Problème :</strong> expert reconnu, offre floue, pas de positionnement clair.</p>
+          <p><strong>Action :</strong></p>
+          <ul>
+            <li>Analyse du marché et des concurrents</li>
+            <li>Définition d’une offre structurée</li>
+            <li>Construction d’un tunnel simple</li>
+            <li>Création d’une landing optimisée</li>
+          </ul>
+          <p><strong>Résultat :</strong> offre clarifiée, argumentaire aligné, base prête pour acquisition.</p>
+        </article>
+        <article class="case">
+          <h3>Cas 2 — Produit logiciel en phase de structuration</h3>
+          <p><strong>Problème :</strong> beaucoup de fonctionnalités, aucune priorisation solide.</p>
+          <p><strong>Action :</strong></p>
+          <ul>
+            <li>Recentrage de la vision produit</li>
+            <li>Roadmap à 12 mois</li>
+            <li>Priorisation MoSCoW</li>
+            <li>Définition des KPI</li>
+          </ul>
+          <p><strong>Résultat :</strong> backlog clarifié, exécution accélérée, décisions simplifiées.</p>
+        </article>
+      </div>
+    </section>
+
+    <section id="proofs" class="container proofs-work">
+      <h2>Preuves de travail</h2>
+      <p class="muted">Les éléments visuels seront intégrés dans la prochaine itération.</p>
+      <ul class="proof-list">
+        <li>Extrait de roadmap (floutée)</li>
+        <li>Capture de PRD</li>
+        <li>Structure de backlog</li>
+        <li>Diagramme stratégique</li>
+        <li>Architecture produit</li>
+        <li>Tableau Notion priorisé</li>
+      </ul>
+      <p class="note">Objectif : rendre visible la méthode, la rigueur et la capacité à piloter.</p>
+    </section>
+
+    <section id="growth-projects" class="container products growth-projects">
+      <h2>Projets en cours de croissance</h2>
+      <p class="muted">Ces produits sont récents. Les indicateurs de performance seront analysés sur 12 mois. Mon objectif n’est pas la vitesse. C’est la solidité.</p>
       <div class="grid">
-        <a class="product" href="/products/us.html">
-          <img class="product-thumb" src="/assets/products/us.png" alt="" width="80" height="80">
-          <h4>Us - un espace privé pour votre couple</h4>
-          <p>Application relationnelle centrée sur la mémoire partagée — iOS · Android</p>
-        </a>
         <a class="product" href="/products/tandabuilder.html">
           <img class="product-thumb" src="/assets/products/tandabuilder.png" alt="" width="80" height="80">
           <h4>TandaBuilder</h4>
-          <p>Outil professionnel pour DJs de tango — macOS</p>
+          <p>Logiciel DJ tango — structuration métier et exécution produit.</p>
         </a>
         <a class="product" href="/products/lexiqo.html">
           <img class="product-thumb" src="/assets/products/lexiqo.png" alt="" width="80" height="80">
           <h4>Lexiqo</h4>
-          <p>Jeu de mots multi-plateformes — iOS · Web</p>
+          <p>Jeu sémantique multi-plateformes — produit pensé pour durer.</p>
         </a>
-        <a class="product" href="/products/abecedo.html">
-          <img class="product-thumb" src="/assets/products/abecedo.webp" alt="" width="80" height="80">
-          <h4>Abecedo</h4>
-          <p>Apprentissage et langage — iOS</p>
-        </a>
-        <a class="product" href="/products/depth.html">
-          <img class="product-thumb" src="/assets/products/depth.png" alt="" width="80" height="80">
-          <h4>Depth — Cinematic Wallpapers</h4>
-          <p>Parallaxe depth pour transformer une photo en scène vivante — macOS</p>
+        <a class="product" href="/products/us.html">
+          <img class="product-thumb" src="/assets/products/us.png" alt="" width="80" height="80">
+          <h4>Us</h4>
+          <p>Application relationnelle — vision claire, parcours sobre, lancement réel.</p>
         </a>
         <a class="product" href="/products/horizon.html">
           <img class="product-thumb" src="/assets/products/horizon.png" alt="" width="80" height="80">
           <h4>Horizon</h4>
-          <p>Observation et temporalité — macOS · iOS</p>
-        </a>
-        <a class="product" href="/products/markdown-buddy.html">
-          <img class="product-thumb" src="/assets/products/markdown-buddy.png" alt="" width="80" height="80">
-          <h4>Markdown Buddy</h4>
-          <p>Aperçu Markdown pour développeurs — macOS</p>
-        </a>
-        <a class="product" href="/products/untamed.html">
-          <img class="product-thumb" src="/assets/products/untamed.png" alt="" width="80" height="80">
-          <h4>UNTAMED: into the Wild</h4>
-          <p>Jeu 3D FPV immersif — iOS · Android · Apple TV · Android TV</p>
+          <p>Planification soleil et lune — produit spécialisé, piloté dans la durée.</p>
         </a>
       </div>
-      <p style="margin-top:1rem;">→ <a href="#products">Découvrir les produits</a></p>
-    </section>
-
-    <section id="trust" class="container trust">
-      <h2>Signaux de confiance</h2>
-      <ul class="chips">
-        <li>Apps publiées</li>
-        <li>TestFlight / App Store / Play Store</li>
-        <li>Projets en production</li>
-        <li>Tech : SwiftUI · Kotlin · Supabase · PostgreSQL</li>
-      </ul>
-    </section>
-
-    <section id="about" class="container about">
-      <h2>Relier vision, exécution et marché</h2>
-      <p>Je travaille à l’intersection du produit, de la technique et de la stratégie. J’aime les idées exigeantes, les produits sobres, et les solutions qui respectent les utilisateurs.
-      Je ne construis pas des “apps de plus”. Je construis des produits qui ont une raison d’exister et qui peuvent durer.</p>
     </section>
 
     <section id="contact" class="container contact">
-      <h2>Parlons de votre idée</h2>
-      <p>Vous pouvez m’expliquer votre projet en quelques phrases : où vous en êtes, ce que vous imaginez, ce qui vous bloque.</p>
+      <h2>Échangeons 20 minutes</h2>
+      <p>Repartez avec une vision claire de vos prochaines priorités. Je vous dirai honnêtement si je peux vous aider.</p>
       <form action="#" method="post" class="contact-form">
         <label>Nom<input type="text" name="name" required></label>
         <label>Email<input type="email" name="email" required></label>
-        <label>Votre idée<textarea name="idea" rows="4" required></textarea></label>
+        <label>Votre projet<textarea name="idea" rows="4" required></textarea></label>
         <fieldset class="radios">
-          <legend>Où en êtes-vous ?</legend>
-          <label><input type="radio" name="stage" value="idee" checked><span>Idée</span></label>
-          <label><input type="radio" name="stage" value="prototype"><span>Prototype</span></label>
-          <label><input type="radio" name="stage" value="lance"><span>Déjà lancé</span></label>
+          <legend>Votre priorité actuelle</legend>
+          <label><input type="radio" name="stage" value="clarifier" checked><span>Clarifier la vision</span></label>
+          <label><input type="radio" name="stage" value="structurer"><span>Structurer le produit</span></label>
+          <label><input type="radio" name="stage" value="lancer"><span>Lancer ou itérer</span></label>
         </fieldset>
-        <label>Budget / timing (optionnel)<input type="text" name="budget"></label>
-        <button type="submit" class="btn primary">Me contacter</button>
+        <label>Contrainte de timing (optionnel)<input type="text" name="budget"></label>
+        <button type="submit" class="btn primary">Réserver mon échange</button>
       </form>
     </section>
   </main>
 
   <footer class="site-footer">
     <div class="container">
+      <p class="values">Valeurs : Clarté · Structure · Exécution · Fiabilité</p>
       <nav class="footer-links">
         <a href="https://github.com/japaris" target="_blank" rel="noopener noreferrer">GitHub</a>
         <a href="https://instagram.com/j_in_paris" target="_blank" rel="noopener noreferrer">Instagram</a>
