Ajuste la landing: masque preuves, ajoute produits manquants et agrandit CTA

--- a/index.html
+++ b/index.html
@@ -131,20 +131,6 @@
       </div>
     </section>
 
-    <section id="proofs" class="container proofs-work">
-      <h2>Preuves de travail</h2>
-      <p class="muted">Les éléments visuels seront intégrés dans la prochaine itération.</p>
-      <ul class="proof-list">
-        <li>Extrait de roadmap (floutée)</li>
-        <li>Capture de PRD</li>
-        <li>Structure de backlog</li>
-        <li>Diagramme stratégique</li>
-        <li>Architecture produit</li>
-        <li>Tableau Notion priorisé</li>
-      </ul>
-      <p class="note">Objectif : rendre visible la méthode, la rigueur et la capacité à piloter.</p>
-    </section>
-
     <section id="growth-projects" class="container products growth-projects">
       <h2>Projets en cours de croissance</h2>
       <p class="muted">Ces produits sont récents. Les indicateurs de performance seront analysés sur 12 mois. Mon objectif n’est pas la vitesse. C’est la solidité.</p>
@@ -168,6 +154,26 @@
           <img class="product-thumb" src="/assets/products/horizon.png" alt="" width="80" height="80">
           <h4>Horizon</h4>
           <p>Planification soleil et lune — produit spécialisé, piloté dans la durée.</p>
+        </a>
+        <a class="product" href="/products/abecedo.html">
+          <img class="product-thumb" src="/assets/products/abecedo.webp" alt="" width="80" height="80">
+          <h4>Abecedo</h4>
+          <p>Apprentissage et langage — iOS</p>
+        </a>
+        <a class="product" href="/products/depth.html">
+          <img class="product-thumb" src="/assets/products/depth.png" alt="" width="80" height="80">
+          <h4>Depth — Cinematic Wallpapers</h4>
+          <p>Parallaxe depth pour transformer une photo en scène vivante — macOS</p>
+        </a>
+        <a class="product" href="/products/markdown-buddy.html">
+          <img class="product-thumb" src="/assets/products/markdown-buddy.png" alt="" width="80" height="80">
+          <h4>Markdown Buddy</h4>
+          <p>Aperçu Markdown pour développeurs — macOS</p>
+        </a>
+        <a class="product" href="/products/untamed.html">
+          <img class="product-thumb" src="/assets/products/untamed.png" alt="" width="80" height="80">
+          <h4>UNTAMED: into the Wild</h4>
+          <p>Jeu 3D FPV immersif — iOS · Android · Apple TV · Android TV</p>
         </a>
       </div>
     </section>
