Affiner la section approche: design plus visuel et sans répétition

--- a/index.html
+++ b/index.html
@@ -33,19 +33,23 @@
     </section>
 
     <section id="pillars" class="container pillars">
-      <h2>J’incarne. Je structure. J’exécute.</h2>
+      <h2>Une approche claire, de la vision à la livraison</h2>
+      <p class="pillars-intro">Trois appuis simples pour avancer avec calme, sans dispersion.</p>
       <div class="pillar-grid">
-        <article class="card">
-          <h3>J’incarne</h3>
-          <p>Je porte une posture claire : cadrer sans bruit, décider sans agitation, avancer avec constance.</p>
+        <article class="pillar-card">
+          <p class="pillar-number">01</p>
+          <h3>Clarifier la direction</h3>
+          <p>Identifier l’essentiel, poser les priorités, et définir un cap lisible.</p>
         </article>
-        <article class="card">
-          <h3>Je structure</h3>
-          <p>Je transforme les intuitions en priorités, puis les priorités en plan d’action lisible par toute l’équipe.</p>
+        <article class="pillar-card">
+          <p class="pillar-number">02</p>
+          <h3>Structurer les décisions</h3>
+          <p>Transformer la vision en plan d’action concret, compréhensible par toute l’équipe.</p>
         </article>
-        <article class="card">
-          <h3>J’exécute</h3>
-          <p>Je ne m’arrête pas aux recommandations. Je construis, je livre et je pilote les itérations.</p>
+        <article class="pillar-card">
+          <p class="pillar-number">03</p>
+          <h3>Livrer avec constance</h3>
+          <p>Construire, lancer, puis piloter les itérations avec méthode et continuité.</p>
         </article>
       </div>
     </section>
@@ -102,7 +106,6 @@
 
     <section id="cases" class="container cases">
       <h2>Cas concrets</h2>
-      <p class="muted">Même sans vanity metrics, la maîtrise se voit dans la structure, les choix et la livraison.</p>
       <div class="case-grid">
         <article class="case">
           <h3>Cas 1 — Lancement d’une plateforme d’expertise</h3>
